Engine Yard test

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,5 +12,6 @@
         <p><a href="http://vimeo.com/6450292">Getting Started with RadRails</a> from <a href="http://vimeo.com/aptana">Aptana, Inc.</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
     </p>
     <p><%= link_to "MOTD", motds_path %></p>
+    This is a test for engine yard.
   </body>
 </html>
