--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,15 +3,6 @@
     <title>A Rails App for Testing<title>
   </head>
   <body>
-    <p>
-      <object width="400" height="300"><param name="allowfullscreen" value="true" />
-        <param name="allowscriptaccess" value="always" />
-        <param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=6450292&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" />
-        <embed src="http://vimeo.com/moogaloop.swf?clip_id=6450292&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="400" height="300"></embed>
-        </object>
-        <p><a href="http://vimeo.com/6450292">Getting Started with RadRails</a> from <a href="http://vimeo.com/aptana">Aptana, Inc.</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
-    </p>
-    <p><%= link_to "MOTD", motds_path %></p>
-    This is a test for engine yard.
+    This is a test.
   </body>
 </html>
