--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,6 @@
     <title>A Rails App for Testing<title>
   </head>
   <body>
-    This is a test.
+    <h1>This is a test for engine yard.</h1>
   </body>
 </html>
